Airflow_Installation/logs/dag_id=my_postgres_dag_v3/run_id=scheduled__2023-07-26T000000+0000/task_id=insert_data/attempt=1.log
[2023-07-29T12:48:06.307+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: my_postgres_dag_v3.insert_data scheduled__2023-07-26T00:00:00+00:00 [queued]>
[2023-07-29T12:48:06.545+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: my_postgres_dag_v3.insert_data scheduled__2023-07-26T00:00:00+00:00 [queued]>
[2023-07-29T12:48:06.567+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T12:48:06.963+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 3
[2023-07-29T12:48:06.980+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2023-07-29T12:48:07.447+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): insert_data> on 2023-07-26 00:00:00+00:00
[2023-07-29T12:48:07.591+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'my_postgres_dag_v3', 'insert_data', 'scheduled__2023-07-26T00:00:00+00:00', '--job-id', '2046', '--raw', '--subdir', 'DAGS_FOLDER/postgres_operator_v2.py', '--cfg-path', '/tmp/tmp4_evs3ut']
[2023-07-29T12:48:07.547+0000] {standard_task_runner.py:55} INFO - Started process 5772 to run task
[2023-07-29T12:48:07.620+0000] {standard_task_runner.py:83} INFO - Job 2046: Subtask insert_data
[2023-07-29T12:48:08.935+0000] {task_command.py:389} INFO - Running <TaskInstance: my_postgres_dag_v3.insert_data scheduled__2023-07-26T00:00:00+00:00 [running]> on host f1ea17bde741
[2023-07-29T12:48:11.560+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Byron
AIRFLOW_CTX_DAG_ID=my_postgres_dag_v3
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2023-07-26T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-07-26T00:00:00+00:00
[2023-07-29T12:48:11.576+0000] {sql.py:253} INFO - Executing: 
        INSERT INTO ***_users (name) VALUES ('Chidi', 'Joseph','Cindy', 'Sarai')
        
    
[2023-07-29T12:48:11.774+0000] {base.py:73} INFO - Using connection ID 'my_connection' for task execution.
[2023-07-29T12:48:19.099+0000] {base.py:73} INFO - Using connection ID 'my_connection' for task execution.
[2023-07-29T12:48:19.512+0000] {sql.py:364} INFO - Running statement: 
        INSERT INTO ***_users (name) VALUES ('Chidi', 'Joseph','Cindy', 'Sarai')
        
    , parameters: None
[2023-07-29T12:48:19.739+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 2: ...INSERT INTO ***_users (name) VALUES ('Chidi', 'Joseph','...
                                                             ^

[2023-07-29T12:48:20.067+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=my_postgres_dag_v3, task_id=insert_data, execution_date=20230726T000000, start_date=20230729T124806, end_date=20230729T124820
[2023-07-29T12:48:20.590+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 2046 for task insert_data (INSERT has more expressions than target columns
LINE 2: ...INSERT INTO ***_users (name) VALUES ('Chidi', 'Joseph','...
                                                             ^
; 5772)
[2023-07-29T12:48:20.748+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2023-07-29T12:48:21.112+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
